commit 075aa0305a9cc9a7f70763af4c6ef871539fd629
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Wed May 30 10:19:44 2012 +0200

    some changes.

commit 1d71bba1d4623580c46852214d921d70cfbff3eb
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Mon May 21 14:39:45 2012 +0200

    Remove useless files.

commit 1af303410f98984a24cd2a307f0aeb22140e4f9b
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Mon May 21 14:38:12 2012 +0200

    Add new files mutex and thread files.

commit ddce59397511ece81410dbb65ae38695718de340
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Mon May 21 14:37:49 2012 +0200

    Some changes about build system.

commit 851aa64b8614e48ea6d5d93047e190f5c06e95ee
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 14:09:34 2012 +0200

    Remove directory.

commit ee0c13ec74b86928ca0fde0cb29ff153febdaa42
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 14:08:18 2012 +0200

    New building

commit 6434a93f7695b58450e9b960ef62b1dc90aebc83
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:47:25 2012 +0200

    Remove useless files.

commit 5773dfa9674d96b91c5f89f0e16fa98a45c25772
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:46:22 2012 +0200

    Rename libsal files.

commit 6cbc081cb4bfcb3d7dcc0ccaf9c9505ecc0f37e4
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:31:34 2012 +0200

    Add Public include files.

commit 25198f274b66d1c1651caeb065c77a47e07544f2
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:23:46 2012 +0200

    Remove useless file.

commit 56707479ebd2f717c29ca97f8e3f72c1959afd54
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:22:40 2012 +0200

    Add build system.

commit 738c662a5e26ca9aa0676093cafbc7864bcda220
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>