@@ -5,13 +5,12 @@
  * \author frederic.dhaeyer@parrot.com 
 */
 //------------------------------
-#ifndef _THREAD_H_
-#define _THREAD_H_
+#ifndef _SAL_THREAD_H_
+#define _SAL_THREAD_H_
 
-/*
-typedef void* sal_thread_t;
+/*typedef void* sal_thread_t;
 typedef void* sal_thread_param_t;
 typedef void* (*sal_thread_routine) (sal_thread_param_t);
 */
-#endif // _THREAD_H_
+#endif // _SAL_THREAD_H_
 
