@@ -1,3 +1,9 @@
+/**
+ * \file libSAL/thread.c
+ * \brief This file contains sources about thread abstraction layer
+ * \date 05/18/2012
+ * \author frederic.dhaeyer@parrot.com
+*/
 #include <config.h>
 #include <libSAL/thread.h>
 
